--- a/css/style.css
+++ b/css/style.css
@@ -9864,7 +9864,7 @@ textarea.form-control {
       margin-bottom: 20px;
       font-size: 16px;
       font-weight: normal;
-      color: #bfbfbf;
+      color: #8f00ff;
     }
     
     .timeline-body > p,
