--- a/css/style.css
+++ b/css/style.css
@@ -3741,9 +3741,9 @@ input[type="button"].btn-block {
     color: #fff; }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: #fff; }
+  color: rgba(255, 255, 255, 0.5); }
   .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-    color: #fff; }
+    color: rgba(255, 255, 255, 0.75); }
   .navbar-dark .navbar-nav .nav-link.disabled {
     color: rgba(255, 255, 255, 0.25); }
 
@@ -8220,8 +8220,8 @@ h1, h2, h3, h4, h5,
         height: 2px;
         bottom: 0;
         left: 0;
-        background: #fff;
-        visibility: hidden;
+        background: #8f00ff;
+        visibility: visible;
         -webkit-transform: scaleX(0);
         -moz-transform: scaleX(0);
         -ms-transform: scaleX(0);
@@ -8233,7 +8233,7 @@ h1, h2, h3, h4, h5,
         -o-transition: all 0.3s ease-in-out 0s;
         transition: all 0.3s ease-in-out 0s; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover span:before {
-      visibility: hidden;
+      visibility: visible;
       -webkit-transform: scaleX(1);
       -moz-transform: scaleX(1);
       -ms-transform: scaleX(1);
@@ -8271,15 +8271,15 @@ h1, h2, h3, h4, h5,
   .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active {
     background: transparent;
     background: none;
-    color: #fff; }
+    color: #8f00ff; }
     .ftco-navbar-light .navbar-nav > .nav-item .nav-link.active span:before {
-      visibility: hidden;
+      visibility: visible;
       -webkit-transform: scaleX(1);
       -ms-transform: scaleX(1);
       transform: scaleX(1); }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-      color: #fff; } }
+      color: #8f00ff; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
